static access control data, dashboard fixes
